# urban-flood-ml

./: .gitignore  DESIGN.md  EVALUATION.md  README.md  ROADMAP.md  Untitled.ipynb  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/city/: bengaluru.yaml  chandigarh.yaml  delhi.yaml  mumbai.yaml
configs/hotspots/: bengaluru.yaml  chandigarh.yaml  delhi.yaml  mumbai.yaml
dashboard/: add_waterlog.py  add_waterlog_panel.py  build_data.py
docs/: how-it-works.md  index.html
docs/assets/: bengaluru.json  bengaluru_hotspots.json  chandigarh.json  chandigarh_hotspots.json  cities.json  delhi.json  delhi_hotspots.json  mumbai.json  mumbai_hotspots.json
events/: README.md  build_events.py  flood_events.csv  gdelt_timeline.csv  gdelt_timeline_chandigarh.csv  gdelt_timeline_delhi.csv  gdelt_timeline_mumbai.csv  hotspots.geojson
models/: bengaluru_model.json  bengaluru_waterlog_model.json  chandigarh_model.json  chandigarh_waterlog_model.json  delhi_model.json  delhi_waterlog_model.json  mumbai_model.json  mumbai_waterlog_model.json
results/: bengaluru_metrics.json  bengaluru_waterlog_metrics.json  bengaluru_why.json  chandigarh_metrics.json  chandigarh_waterlog_metrics.json  chandigarh_why.json  crosscity_river.json  crosscity_summary.csv  delhi_metrics.json  delhi_waterlog_metrics.json  delhi_why.json  mumbai_metrics.json  mumbai_waterlog_metrics.json  mumbai_why.json  summary.csv
scripts/: overview.py
src/floodml/: __init__.py  cli.py  config.py  events.py  (+8 more)
tests/: test_config.py  test_eval_crosscity.py  test_explain.py  test_features.py
(+20 files in other folders)
